--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="keywords" content="For Fun,SpringBoot,Vue,博客,分享">
-    <meta name="description" content="For Fun是一个多人博客平台，在这里你可以记录、分享自己的工作感悟和生活心得">
+    <meta name="keywords" content="wblog,码农的小屋,码农,码农日记,分享,码农分享">
+    <meta name="description" content="wblog是一个记录两只码农不断进步的博客，在这里分享他们的工作感悟和生活心得">
     <link rel="shortcut icon" href="./static/favicon.ico" type="image/x-icon" />
-    <title>ForFun Find Yourself</title>
+    <title>码农的小窝</title>
   </head>
   <body>
     <div id="app"></div>
